--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,5 +44,10 @@ jobs:
           SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
           echo "FILE_NAME = ${{ env.FILE_NAME}}"
+          echo '${{ secrets[env.SECRET_NAME] }}' > shared-services.json
+          echo '${{ secrets[env.SECRET_NAME] }}' > "${{ env.FILE_NAME }}"
+          pwd
+          ls
+          cat zs-devops.json
           
  
