--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -98,5 +98,12 @@ jobs:
       steps: 
         - name: Check env
           run: echo "${{env.SECRET_NAME}}"
+      
+        - name: Setup Creds
+          run: | 
+            echo '${{ secrets[env.SECRET_NAME] }}' > shared-services.json
+            echo '${{ secrets[env.SECRET_NAME] }}' > "{{ env.FILE_NAME }}"
+            pwd
+            ls
           
  
