--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,10 +41,10 @@ jobs:
         - id: set-project
           run: |
             echo "::set-output name=project::$file_array"
-            readarray -td $'\0' file_array < <(
+            readarray -t file_array < <(
                       for added_modified_file in ${{ steps.sort.outputs.files  }}; do 
                       file_name=$(dirname ${added_modified_file} | cut -d'/' -f2)
-                      printf '%s\0' "$file_name";
+                      printf "$file_name";
                       done 
                       )
             echo "project=`echo ${file_array[@]}`" >> "$GITHUB_OUTPUT"
