--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,11 +41,14 @@ jobs:
         - id: set-project
           run: |
             echo "::set-output name=project::$file_array"
-            readarray -t file_array < <(
+            readarray -td $'\0' file_array < <(
                       for added_modified_file in ${{ steps.sort.outputs.files  }}; do 
                       file_name=$(dirname ${added_modified_file} | cut -d'/' -f2)
-                      echo  "$file_name";
-                      done 
+                      do     printf '%s %s\0' "${#i}" "$file_name";
+                      done |
+                              sort -bz -k1,1n -k2|
+                              cut -zd " " -f2-
+                      )
                       )
             echo "project=`echo ${file_array[@]}`" >> "$GITHUB_OUTPUT"
 
