--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,13 +19,13 @@ jobs:
     steps:
     
       - name: Setup Env
-        if: contains(github.ref, "development")
+        if: contains(github.ref, 'development')
         run: |
         
           echo "ENV_APP_NAME=DEV_APP_NAME" >> $GITHUB_ENV
           echo "ENV_GAR_PROJECT=DEV_GAR_PROJECT" >> $GITHUB_ENV
       - name: Setup Env
-        if: contains(github.ref, "staging")
+        if: contains(github.ref, 'staging')
         run: |
 
           echo "ENV_APP_NAME=STAGE_APP_NAME" >> $GITHUB_ENV
