--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,27 +12,41 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
 
+
+env:
+  REGISTRY: ghcr.io
+
+# There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
 
-  setup-env:
-    runs-on: ubuntu-latest
-    steps:
-    
-      - name: Setup Env
-        if: contains(github.ref, 'development')
-        run: |
-        
-          echo "ENV_APP_NAME=DEV_APP_NAME" >> $GITHUB_ENV
-          echo "ENV_GAR_PROJECT=DEV_GAR_PROJECT" >> $GITHUB_ENV
-      - name: Setup Env
-        if: contains(github.ref, 'staging')
-        run: |
 
-          echo "ENV_APP_NAME=STAGE_APP_NAME" >> $GITHUB_ENV
-          echo "ENV_GAR_PROJECT=STAGE_GAR_PROJECT" >> $GITHUB_ENV
-      - name: export credentials file
-        run: |
-          echo "APP_NAME"
-          echo '${{ vars[env.ENV_APP_NAME] }}' 
-          echo "GAR PROJECT"
-          echo '${{ vars[env.ENV_GAR_PROJECT] }}'
+  build-and-push-deployment-image:
+    if: |
+      github.event.commits[0].added | contains('gcp/') ||
+      github.event.commits[0].modified | contains('gcp/')
+    runs-on: ubuntu-latest
+    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
+    permissions:
+      contents: read
+      packages: write
+      #
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
+
+
+  build-and-push-go-image:
+    if: |
+      github.event.commits[0].added | contains('aws/') ||
+      github.event.commits[0].modified | contains('aws/')
+    runs-on: ubuntu-latest
+    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
+    permissions:
+      contents: read
+      packages: write
+      #
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
