--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,20 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: Build and Push Base Images
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "development" branch
   push:
-    branches: [ "development","staging" ]
-  pull_request:
-    branches: [ "development","staging" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ main ]
 
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
@@ -31,9 +24,11 @@ jobs:
           for added_modified_file in ${{ steps.files.outputs.all }}; do
             echo ${added_modified_file}
           done
+
   build-and-push-deployment-image:
     needs: changed-files
-    if: ${{ contains(needs.changed-files.outputs.files, 'gcp/') }}
+    if: ${{ contains(needs.changed-files.outputs.files, 'deployments/') }}
+
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
@@ -44,11 +39,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.PAT }}
+      # This step uses [docker/metadata-action](https://github.com/docker/metadata-action#about) to extract tags and labels that will be applied to the specified image. The `id` "meta" allows the output of this step to be referenced in a subsequent step. The `images` value provides the base name for the tags and labels.
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: deployments/.
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}-deployments-${{ github.sha }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   build-and-push-go-image:
     needs: changed-files
-    if: ${{ contains(needs.changed-files.outputs.files, 'aws/') }}
+    if: ${{ contains(needs.changed-files.outputs.files, 'go/') }}
+
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
